[package]
name = "pmw3389"
version = "0.1.0"
edition = "2021"
authors = ["YAGI Toshiki <YayoiInaba@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Embedded rust driver for the PixArt PMW3389 optical motion sensor"
repository = "https://github.com/MarchRaBBiT/pmw3389-rs"

[dependencies]
embedded-hal = "1.0"
embedded-hal-async = "1.0"
defmt = { version = "1.0", optional = true }

[dev-dependencies]
pmw3389 = { path = ".", features = ["defmt", "device-status"] }

[target.'cfg(any(target_arch = "arm", target_arch = "thumb"))'.dev-dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23", features = ["defmt", "arch-cortex-m", "executor-thread"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23", features = ["defmt"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23", features = ["rp2040", "defmt", "time-driver", "critical-section-impl"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23" }
embassy-usb-driver = "0.2.0"
cortex-m-rt = "0.7.5"
futures = { version = "0.3", default-features = false, features = ["async-await"] }
portable-atomic = { version = "1.11", features = ["critical-section"] }
defmt = "1.0"
defmt-rtt = "0.4"
panic-probe = { version = "1.0", features = ["print-defmt"] }
itoa = "1.0"
hex = { version = "0.4", default-features = false }

[target.'cfg(all(target_arch = "xtensa", target_os = "none"))'.dev-dependencies]
esp-hal = { version = "1.0.0-rc.0", features = ["esp32s3", "rt", "unstable", "__esp_hal_embassy"] }
esp-hal-embassy = { version = "0.9.1", features = ["esp32s3"] }
esp-println = { version = "0.16.1", default-features = false, features = ["esp32s3", "jtag-serial", "critical-section", "colors"] }
esp-backtrace = { version = "0.18.1", features = ["esp32s3", "panic-handler", "println"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23" }
static_cell = "2.0"
itoa = "1.0"

[target.'cfg(all(target_arch = "riscv32", target_os = "none"))'.dev-dependencies]
esp-hal = { version = "1.0.0-rc.0", features = ["esp32c3", "rt", "unstable", "__esp_hal_embassy"] }
esp-hal-embassy = { version = "0.9.1", features = ["esp32c3"] }
esp-println = { version = "0.16.1", default-features = false, features = ["esp32c3", "jtag-serial", "critical-section", "colors"] }
esp-backtrace = { version = "0.18.1", features = ["esp32c3", "panic-handler", "println"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23", features = ["arch-riscv32"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23" }
static_cell = "2.0"
itoa = "1.0"

[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23" }
embassy-time-queue-utils = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23" }

[features]
default = []
device-status = []
defmt = ["dep:defmt"]

[package.metadata.rp2040]
# Default runner flashes firmware via probe-rs.
# runner = "probe-rs run --chip RP2040"
# Alternative runner converts the built ELF into UF2 using elf2uf2-rs.
runner = "elf2uf2-rs"
